[package]
name = "raylib4-sys"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Low level bindings to raylib v4"
homepage = "https://github.com/sile/raylib4-sys"
repository = "https://github.com/sile/raylib4-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.59"

[package.metadata.docs.rs]
features = [ "docs-rs" ]
